trying to fix z-index

--- a/src/sass/sections/about.scss
+++ b/src/sass/sections/about.scss
@@ -2,12 +2,23 @@
 
 .about {
     background-color: #f9f9f9;
+    padding: 36px 0px 50px;
 }
 
 .about__awards-item-title {
     @include font($fs: 20px, $fw: 800, $fc: #000, $ls: -0.8px, $lh: 30px);
     margin-bottom: 16px;
     text-transform: uppercase;
+
+    &::before {
+        position: absolute;
+        content: "";
+        background-color: #00eaff;
+        @include space(60px, 2px);
+        top: 0;
+        left: 0;
+        transform: translate(-15px, 15px);
+    }
 }
 
 .about__title {
@@ -19,17 +30,23 @@
     margin-bottom: 22px;
 }
 
-.about__awards-paragraph--modifier {
+.about__awards-paragraph--span {
     @include font($fc: #000, $fw: 800);
 }
 
+.about__awards-list {
+    counter-reset: awards-counter;
+}
+
 .about__awards-list-item {
-    @include space($ww: 225px, $hh: 465px);
-    @include flex(center, center)
-    padding: 46px 0px 28px 25px;
+    counter-increment: awards-counter;
+    @include space($ww: 225px, $hh: 500px);
+    position: relative;
+    padding: 46px 26px 28px 25px;
     box-shadow: -17px 20px #e6e9eb;
     background-color: #fff;
-    
+    z-index: 1;
+
 
     &:not(:last-child) {
         margin-bottom: 88px;
@@ -39,20 +56,57 @@
         margin-bottom: 62px;
     }
 
-    &::before {
-        content: "";
-        background-color: rgb(0, 234, 255);
-        @include space(60px, 2px)
+    &:nth-child(1) .about__awards-img {
+        left: 46%;
+        transform: translateX(-50%);
+        top: 57%;   
     }
+
+    &:nth-child(2) .about__awards-img {
+        left: 46%;
+        transform: translateX(-50%);
+        top: 57%;
+        background-color: transparent;
+    }
+
+    &:nth-child(3) .about__awards-img {
+        left: 45%;
+        transform: translateX(-50%);
+        top: 65%;
+    }
+
+    &::before {
+        @include font($fs: 70px, $fw: 700, $fc: #edf0f2);
+        position: absolute;
+        content: '0'counter(awards-counter);
+        right: 0;
+        top: 0;
+        transform: translateY(-50%);
+        z-index: -1;
+    }
+
 }
 
 .about__awards-img {
-    margin: 0 auto;
+    position: absolute;
 }
 
-// .partner-list__item:not(:last-child) {
-//     margin-right: 26px;
-// }
+
+
+.about-list-title {
+    margin-bottom: 26px;
+}
+
+.about__article-title {
+    @include font($fs: 24px, $fw: 800, $fc: #000, $lh: 30px);
+    text-transform: uppercase;
+    margin-bottom: 16px;
+}
+
+.about__article-paragraph {
+    @include font($fs: 14px, $fc: #6b6f7a, $lh: 21px);
+    margin-bottom: 43px;
+}
 
 .partner-list__link {
     display: inline-block;
